# ergnotifier

./: .env.example  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs  node.rs  notifier.rs  state.rs  telemetry.rs  watcher.rs
